# sdl_mix

./: .gitignore  CMakeLists.txt  sdl_mix.cpp  sdl_mix_config.h.in
include/: Game.h  PlayerAction.h  SDL.h  Sprite.h  sdl_mix_config.h
src/: Game.cpp  Sprite.cpp
